# ypass

./: .env  .eslintrc.json  cli.js  import-sorter.json  package.json  tsconfig.json
config/: index.ts
node/: .gitignore  cli.js  tsconfig.json
node/config/: environment.ts  paths.ts
node/src/: PasswordGenerator.ts  index.ts  types.ts
node/src/backends/keychain/: errors.ts  index.ts
node/src/commands/: generate.ts  index.ts
node/src/util/: index.ts
node/types/: coreext.d.ts  lodash.d.ts  misc.d.ts
python/: .gitignore  pyproject.toml
python/ypass/: __init__.py  args.py  main.py  password.py
python/ypass/backends/: __init__.py  keychain_backend.py
python/ypass/backends/keychain/: consts.py  keychain_backend.py  password_reader.py
python/ypass/commands/: __init__.py  add.py  delete.py  list.py  show.py  update.py
python/ypass/formatters/: __init__.py  alfred_formatter.py  formatter.py  table_formatter.py  text_formatter.py
python/ypass/util/: __init__.py  errors.py  password_query.py  stdin_or_value.py
src/: PasswordManager.ts  index.ts
src/backends/: index.ts
src/backends/keychain/: KeychainBackend.ts  parsing.ts  types.ts
src/commands/: list.ts  remove.ts  show.ts  store.ts
src/util/: console.ts  exec.ts
types/: chalk.d.ts
